# milton_maps

./: .buildinfo  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  BUG_REPORT.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  about.html  dvc.yaml  environment.yml  first-time-setup.html  genindex.html  getting-started.html  index.html  milton_maps.data.html  milton_maps.html  modules.html  objects.inv  project-organization.html  py-modindex.html  pyproject.toml  requirements.txt  requirements_dev.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  user-guide.html
.dvc/: config
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml
_modules/: index.html
_modules/milton_maps/: cli.html  logging_config.html  milton_maps.html  process_assessor_db.html  process_crash_data.html  process_openspace.html  process_tax_parcels.html  process_town_boundaries.html
_sources/: getting-started.md.txt  index.md.txt  milton_maps.data.rst.txt  milton_maps.rst.txt
_static/: pygments.css
data/processed/: .gitignore
data/raw/: .gitignore  CrashDetails_cwzqv2fitj4m5ovin0xrkq11.xls.dvc  L3_SHP_M189_MILTON.dvc  L3_SHP_M189_MILTON.zip.dvc  L3_SHP_M243_QUINCY.dvc  L3_SHP_M243_QUINCY.zip.dvc  M189_parcels_gdb.dvc  M189_parcels_gdb.zip.dvc  M243_parcels_gdb.dvc  M243_parcels_gdb.zip.dvc  MassDOT_Roads_SHP.dvc  MassDOT_Roads_SHP.zip.dvc  MiltonCrashDetails.csv.dvc  latch_2017.csv.dvc  openspace.dvc  openspace.zip.dvc  townssurvey_shp.dvc  townssurvey_shp.zip.dvc
docs/: Makefile  about.md  bug_report.rst  conf.py  construction_years.ipynb  crash_analysis.ipynb  first-time-setup.md  index.rst  installation.rst  make.bat  milton_maps.rst  modules.rst  open_space_analysis.ipynb  project-organization.md  reproduce.rst  usage.rst  user-guide.md
docs/_build/doctrees/: authors.doctree  index.doctree  (+7 more)
docs/_templates/: layout.html
docs/quarto/: .gitignore  _publish.yml  randolph_avenue_crashes.qmd
milton_maps/: __init__.py  cli.py  logging_config.py  milton_maps.py  process_assessor_db.py  process_crash_data.py  process_openspace.py  process_tax_parcels.py  process_town_boundaries.py
notebooks/: milton_maps.ipynb  open_space_analysis.ipynb  resident_vmt.ipynb  square_footage_data.ipynb
references/: .gitignore  latch_data_dictionary.xlsx.dvc
setup/: environment.yml  setup.sh
tests/: __init__.py  test_milton_maps.py
(+26 files in other folders)
