[tool.poetry]
name = "milton-maps"
version = "0.1.0"
description = "Analysis of GIS geospatial data sources for Milton, MA in transparent and reproducible Python"
authors = ["Alex Hasha <alex@hashadatascience.com>"]
license = "MIT License"
readme = "README.rst"
packages = [{include = "milton_maps"}]

[tool.poetry.scripts]
milton_maps = "milton_maps:cli.main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
contextily = "^1.3.0"
dvc = "^2.51.0"
dvc-gdrive = "^2.19.1"
docopt = "^0.6.2"
Fiona = "^1.9.2"
folium = "^0.14.0"
geopandas = "^0.12.2"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
pygeos = "^0.14"
scipy = "^1.10.1"
seaborn = "^0.12.2"
xlrd = "^2.0.1"
scikit-learn = "^1.2.2"
dvc-gs = "^2.22.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"
ipython = "^8.11.0"
nbsphinx = "^0.9.1"
ipywidgets = "^8.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
